@@ -105,10 +105,12 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.15.0</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>17</source>
+          <target>17</target>
           <parameters>true</parameters>
-
+          <compilerArgs>
+            <arg>-proc:full</arg>
+          </compilerArgs>
           <fork>true</fork>
         </configuration>
       </plugin>
